--- a/mpxyhl/src/main/res/layout/activity_homepager.xml
+++ b/mpxyhl/src/main/res/layout/activity_homepager.xml
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/tab_menu_item"
-                android:text="社区"
+                android:text="订单"
                 />
         </LinearLayout>
 
