--- a/mpxyhl/src/main/res/layout/view_addr.xml
+++ b/mpxyhl/src/main/res/layout/view_addr.xml
@@ -34,6 +34,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:visibility="gone"
     android:id="@+id/rl_addr">
     <ImageView
         android:id="@+id/iv_people"
