--- a/mpxyhl/src/main/res/values/colors.xml
+++ b/mpxyhl/src/main/res/values/colors.xml
@@ -19,4 +19,11 @@
     <color name="color_view_three">#ededed</color>
     <color name="order_tv">#262626</color>
     <color name="albumback">#E1E0DE</color>
+    <color name="background_floating_material_dark">#ff424242</color>
+    <color name="act_background">#efefef</color>
+    <color name="blue">#4c90f9</color>
+    <color name="transparent">#00000000</color>
+    <color name="phone_bg">#f6f6f6</color>
+    <color name="black"> #000000</color>
+    <color name="white"> #FFFFFF</color>
 </resources>
