--- a/mpxyhl/src/main/res/values/dimens.xml
+++ b/mpxyhl/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="thirty_two">@dimen/w34</dimen>
     <dimen name="thirty_four">@dimen/w34</dimen>
     <dimen name="thirty">@dimen/w30</dimen>
+    <dimen name="offset_title">5dp</dimen>
+    <dimen name="width_title_leftImg">30dp</dimen>
+    <dimen name="title_text_size">15sp</dimen>
 </resources>
